--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title><%= @title %></title>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel='stylesheet' href='/styles.css'>
 </head>
 <body>
   <div class="container">
