--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,54 @@
-body {
+HTML{
+  margin: 0px;
+  padding: 0px;
+  }
+
+BODY{
+  margin: 0px;
+  padding: 0px;
+  background-image: url(../img/crowd.jpg);
   font-family: 'Droid Serif', serif;
+  font-size: 15px;
+  }
+
+  a:link {
+  color: green;
+}
+a:visited {
+  color: red;
+}
+a:hover{
+  color: red;
+}
+a:active {
+  color: yellow;
 }
 
-ul{
-  list-style-type: none;
-}
+
+
+  .container{
+      display: flex
+  }
+
+  .jumbotron {
+    width:50%;
+    height: auto;
+    background-color:#f39c12;
+    padding:10px;
+    margin:10px;
+    opacity: 0.7;
+
+  }
+
+  form {
+    width: 360px;
+    /*text-align: center;*/
+    margin: auto;
+    font-size: 15px;
+  }
+
+
+  .btn {
+    margin-top: 10px;
+    margin-right: 4px;
+  }
