--- a/views/band.erb
+++ b/views/band.erb
@@ -1,5 +1,10 @@
-<h1><%= @band.band_name %></h1>
+<div class="jumbotron">
+
+<h1><%= @band.band_name.titleize() %></h1>
 <h5>Your Rating <%= @band.rating %></h5>
+</div>
+
+<div class="jumbotron">
 
 <form action="/band/<%= @band.id %>" method="post">
   <input name="_method" type="hidden" value="patch">
@@ -18,3 +23,4 @@
 </form>
 
 <a href="/">Go back to home</a>
+</div>
