--- a/views/errors_venue.erb
+++ b/views/errors_venue.erb
@@ -1,8 +1,13 @@
-<h3>Oops there were some errors:</h3>
-<ul>
-  <% @venue_name.errors().full_messages().each() do |message| %>
-    <li><%= message %></li>
-  <% end %>
-</ul>
+<div class="row">
+  <div class="container">
+    <div class="jumbotron col-md-6">
 
-<h5><a href="/" >Return to main page to try again</a></h5>
+      <h3>Oops there were some errors:</h3>
+      <ul>
+        <% @venue_name.errors().full_messages().each() do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+
+      <h5><a href="/" >Return to main page to try again</a></h5>
+    </div>
