--- a/views/index.erb
+++ b/views/index.erb
@@ -1,30 +1,42 @@
-<h1>Bands:</h1>
+<div class="row">
+  <div class="container">
+    <div class="jumbotron col-md-6">
+      <h1>Tour Tracker!</h1>
+      <h5>Keep Up With Your Favorite Artists</h5>
 
-<ul>
-  <% @bands.each do |band| %>
-    <li><a href="/band/<%= band.id %>"><%= band.band_name.titleize() %>,  Your Rating <%= band.rating %></a></li>
-  <% end %>
-</ul>
+      <h3>Bands:</h3>
 
-<form action="/add_band" method="post">
-  <label for="band_name">Band name:</label>
-  <input id="band_name" name="band_name" type="text">
-  <label for="rating">Your Rating (from 1 to 5) :</label>
-  <input id="rating" name="rating" type="text">
-  <button type="submit">Add Band</button>
-</form>
+      <ul>
+        <% @bands.each do |band| %>
+        <li><a href="/band/<%= band.id %>"><%= band.band_name.titleize() %>,  Your Rating <%= band.rating %></a></li>
+        <% end %>
+      </ul>
 
-<h1>Venues:</h1>
-<h4>(click to add bands to venues they've played)</h4>
+      <form action="/add_band" method="post">
+        <label for="band_name">Band name:</label>
+        <input id="band_name" name="band_name" type="text">
+        <label for="rating">Your Rating (from 1 to 5) :</label>
+        <input id="rating" name="rating" type="text">
+        <button type="submit">Add Band</button>
+      </form>
+    </div>
 
-<ul>
-  <% @venues.each do |venue| %>
-    <li><a href="/venue/<%= venue.id %>"><%= venue.venue_name.titleize() %></a></li>
-  <% end %>
-</ul>
+    <Br />
+    <Br />
 
-<form action="/add_venue" method="post">
-  <label for="venue_name">Venue name:</label>
-  <input id="venue_name" name="venue_name" type="text">
-  <button type="submit">Add Venue</button>
-</form>
+    <div class="jumbotron col-md-6">
+      <h3>Venues:</h3>
+      <h4>(click to add bands to venues they've played)</h4>
+
+      <ul>
+        <% @venues.each do |venue| %>
+        <li><a href="/venue/<%= venue.id %>"><%= venue.venue_name.titleize() %></a></li>
+        <% end %>
+      </ul>
+
+      <form action="/add_venue" method="post">
+        <label for="venue_name">Venue name:</label>
+        <input id="venue_name" name="venue_name" type="text">
+        <button type="submit">Add Venue</button>
+      </form>
+    </div>
