--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 
       <ul>
         <% @bands.each do |band| %>
-        <li><a href="/band/<%= band.id %>"><%= band.band_name.titleize() %>,  Your Rating <%= band.rating %></a></li>
+        <li><a href="/band/<%= band.id %>"><%= band.band_name() %>,  Your Rating <%= band.rating %></a></li>
         <% end %>
       </ul>
 
@@ -30,7 +30,7 @@
 
       <ul>
         <% @venues.each do |venue| %>
-        <li><a href="/venue/<%= venue.id %>"><%= venue.venue_name.titleize() %></a></li>
+        <li><a href="/venue/<%= venue.id %>"><%= venue.venue_name %></a></li>
         <% end %>
       </ul>
 
