add titleize back after removing problem record in db

--- a/views/band.erb
+++ b/views/band.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 
-<h1><%= @band.band_name() %></h1>
+<h1><%= @band.band_name.titleize() %></h1>
 <h5>Your Rating <%= @band.rating %></h5>
 </div>
 
