--- a/views/venue.erb
+++ b/views/venue.erb
@@ -1,29 +1,31 @@
 <div class="row">
-    <div class="container">
-        <div class="jumbotron col-md-6">
+  <div class="container">
+    <div class="jumbotron col-md-6">
 
-<h1><%= @venue.venue_name.titleize() %>'s Music Schedule:</h1>
+      <h1><%= @venue.venue_name.titleize() %>'s Music Lineup:</h1>
 
-<ul>
-<% @venue.bands.each do |band| %>
-  <li><%= band.band_name %>, Your Rating <%= band.rating %></li>
-<% end %>
-</ul>
+      <ul>
+        <% @venue.bands.each do |band| %>
+        <li><%= band.band_name %>   (Your Rating <%= band.rating %>)</li>
+        <% end %>
+      </ul>
 
-<h5>Venue score based on your rating of all bands playing here: <%= @venue.bands.sum(:rating) %></h5>
-      </div>
+      <h5><strong>Venue score based on your rating of all bands playing here: <%= @venue.bands.sum(:rating) %></strong></h5>
+    </div>
 
-<br />
-      <div class="jumbotron col-md-6">
-<form action="/venue/<%= @venue.id %>" method="post">
-  <input name="_method" type="hidden" value="patch">
-  <% Band.all.each do |band| %>
-    <input type="checkbox" name="check[]" value="<%= band.id %>"><%= band.band_name.titleize() %><br>
-  <% end %>
-  <br />
-  <button type="submit">Add Band to this Venue</button>
-</form>
+    <br />
+    <div class="jumbotron col-md-6">
+      <form action="/venue/<%= @venue.id %>" method="post">
+        <input name="_method" type="hidden" value="patch">
+        <% Band.all.each do |band| %>
+        <input type="checkbox" name="check[]" value="<%= band.id %>"><%= band.band_name.titleize() %><br>
+        <% end %>
+        <br />
+        <button type="submit">Add Band(s) to this Venue</button>
+      </form>
 
-<p><em> * No worries if the artist plays here more than once. You can track multiple shows here by checking the box each time they play. </em></p>
-<a href="/">Go back to home</a>
-      </div>
+      <p><em><small> * No worries if the artist plays here more than once. You can track multiple shows here by checking the box each time they play. </small></em></p>
+      <a href="/">Go back to home</a>
+    </div>
+  </div>
+</div>
