--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 
       <ul>
         <% @bands.each do |band| %>
-        <li><a href="/band/<%= band.id %>"><%= band.band_name.titleize() %>,  Your Rating <%= band.rating %></a></li>
+        <li><a href="/band/<%= band.id %>"><%= band.band_name.titleize() %>  (Your Rating <%= band.rating %>)</a></li>
         <% end %>
       </ul>
 
@@ -21,12 +21,9 @@
       </form>
     </div>
 
-    <Br />
-    <Br />
-
     <div class="jumbotron col-md-6">
       <h3>Venues:</h3>
-      <h4>(click to add bands to venues they've played)</h4>
+      <h4>(click to add bands to venues where they've played)</h4>
 
       <ul>
         <% @venues.each do |venue| %>
@@ -40,3 +37,5 @@
         <button type="submit">Add Venue</button>
       </form>
     </div>
+  </div>
+</div>
